--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ setenv = CYTHON_TEST_MACROS=1
 extras = test
 commands = make check-python
 commands_cov= make pycoverage
-whitelist_externals = make
+allowlist_externals = make
                       valgrind
                       prettier
 
